--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
 
-<script src="必要/jquery工程文件/jquery-1.12.0.js"></script>
+<script src="biyao/jquery工程文件/jquery-1.12.0.js"></script>
 <script>
 $(function(){
 
